Modification of some errors
